--------------------------------------------------------------------------------------------------
Release notes version 1.9.3_beta : Enhancements, modifications and corrected bugs since version 1.9.2 :
--------------------------------------------------------------------------------------------------
26/06/23 (TRUST) Fix          : Fluxes are not printed into an .out file if the dedicated operator's output file is not set in the code, this avoids confusions.
26/06/23 (TRUST) Fix          : Bug fix with lambda keyword in Perte_Charge_Circulaire in PolyMAC discretisation
26/06/23 (TRUST) Fix          : When using Vorticity in Definition_champ to extract the max value for exemple in a probe, not all times were written in the .son file
19/06/23 (TRUST) Portability  : C++14 compilers are now mandatory so old GNU compilers (<5.0) are not supported anymore
19/06/23 (TRUST) Tools        : Upgrade to MEDCoupling 9.11.0
--------------------------------------------------------------------------------------------------
Release notes version 1.9.2 : Enhancements, modifications and corrected bugs since version 1.9.1 :
--------------------------------------------------------------------------------------------------
16/05/23 (TRUST) Fix          : In PolyMAC, auxiliary variables are now ignored reduction_0D fields. see check_boundary_diffusion_thermal_balance validation sheet.
16/05/23 (TRUST) Fix          : Boundary fluxes (flux_bord_) had the wrong sign in PolyMAC.
15/05/23 (TRUST) Keyword      : Add "reuse_preconditioner_nb_it_max n" option to PETSc solvers to reuse preconditioner when matrix changes (default no) if nb_it<=n
15/05/23 (TRUST) Keyword      : Add LU (MUMPS) preconditionner: "petsc solver { precond LU { } ... }". May be useful for Newton methods with a reuse preconditioner strategy
10/05/23 (TRUST) New feature  : New method 'partition()' in Jupyter validation form Python API. Can be used to partition a case from the notebook. See SampleFormJuptyer.