@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.3_beta : Enhancements, modifications and corrected bugs since version 1.9.2 :
 --------------------------------------------------------------------------------------------------
+07/07/23 (TRUST) New feature  : LireMED and EcrMED now relies exclusively on MED groups, not on families. Option 'exclude_groups' can be used in LireMED to avoid reading some face groups.
+07/07/23 (TRUST) Keyword      : LireMED, EcrMED and Champ_Fonc_MED* old syntax is not supported anymore. Use the syntax with braces. 
 26/06/23 (TRUST) Fix          : Fluxes are not printed into an .out file if the dedicated operator's output file is not set in the code, this avoids confusions.
 26/06/23 (TRUST) Fix          : Bug fix with lambda keyword in Perte_Charge_Circulaire in PolyMAC discretisation
 26/06/23 (TRUST) Fix          : When using Vorticity in Definition_champ to extract the max value for exemple in a probe, not all times were written in the .son file
